--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 description = ""
 authors = ["Lukas <e11911069@student.tuwien.ac.at>"]
 readme = "README.md"
-package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
 pymhlib = "^0.1.5"
+smac = "^2.2.0"
 
 
 [build-system]
